--- a/frontend/styles/LandingPage.css
+++ b/frontend/styles/LandingPage.css
@@ -19,6 +19,14 @@ body {
     flex-grow: 1;
 }
 
+.login-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
 .input {
     padding: 0.5rem;
     margin-top: 1rem;
