--- a/frontend/styles/LandingPage.css
+++ b/frontend/styles/LandingPage.css
@@ -45,9 +45,18 @@ button {
     border-radius: 0.5rem;
 
     margin-top: 1rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
+    margin-right: 0.5rem;;
     cursor: pointer;
     font-family: 'Terminal', sans-serif, monospace;
     font-size: 1.2rem;
+}
 
+.register-link {
+    font-family: 'Terminal', sans-serif, monospace;
+    font-size: 1.2rem;
+    color: black;
+    text-decoration: none;
+    margin-bottom: 1rem;
+    cursor: pointer;
 }
